--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ font-weight:
 
 /* GENERAL */
 body {
-    font-family: ,sans-serif;
-    font-weight: 200;
+    font-family: 'Proxima Nova', sans-serif;
     overflow-x: hidden;
 }
 
