--- a/style.css
+++ b/style.css
@@ -63,6 +63,18 @@ hr {
     font-size: 12px;
 }
 
+.fade-in {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.5s linear;
+}
+
+.fade-out {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 0.5s, opacity 0.5s linear;
+}
+
 #navbar .nav-item {
     margin-right: 35px;
 }
