collapse-expand footer button fixed

--- a/hugo/themes/cca-general/layouts/partials/footer.html
+++ b/hugo/themes/cca-general/layouts/partials/footer.html
@@ -48,14 +48,24 @@
             <div class="toggle-footer col-sm-12 d-sm-none"> <!-- menu items column -->
                 <button
                     type="button"
-                    class="btn d-md-none"
+                    class="btn d-md-none collapse-footer collapsed"
                     data-toggle="collapse"
                     data-target="#menu-items"
                     aria-controls="menu-items"
                     aria-expanded="false"
                 >
-                <div class="open-toggle">Collapse footer</div>
-                <div class="close-toggle">Expand footer</div>
+                    Collapse footer
+                </button>
+
+                <button
+                    type="button"
+                    class="btn d-md-none expand-footer collapsed"
+                    data-toggle="collapse"
+                    data-target="#menu-items"
+                    aria-controls="menu-items"
+                    aria-expanded="false"
+                >
+                    Expand footer
                 </button>
 
                 <div class="collapse row" id="menu-items"> <!-- menu items row -->
