vertical line added to call-to-action card

--- a/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row text-row-orangecard">
-        <div class="col-md-5 offset-1 col-sm-12">
+        <div class="col-md-4 offset-md-1 col-sm-12">
             <h4>Our Infrastructure as a Service (laaS) is purpose built for:</h4>
             <ul>
                 <li>Data Sovereignty</li>
@@ -26,7 +26,7 @@
             </ul>
         </div>
 
-        <div class="col-md-5 offset-1 col-sm-12">
+        <div class="col-md-4 offset-md-1 col-sm-12">
             <h4>Cloud.ca is not a hyperscale cloud, here is how we are different:</h4>
             <p>A Canadian-owned provider with a vested interest in your data security. Consume cloud your way: flexible offerings and pricing structures. Easy access to a team that supports your business success and unique needs.</p>
             <a href="#">Learn more</a>
