--- a/hugo/themes/cca-general/layouts/partials/homepage/call-to-action-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/call-to-action-card.html
@@ -1,10 +1,10 @@
 <div class="redorange-card call-to-action-card card-section">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2 offset-md-2 col-sm-12" id="call-to-action">
+            <div class="col-md-2 offset-md-2 col-sm-12" id="cta-block-1">
                 <a href="#">Learn more</a>
             </div>
-            <div class="col-md-2 offset-md-4 col-sm-12" id="call-to-action">
+            <div class="col-md-2 offset-md-4 col-sm-12">
                 <a href="#">Start trial</a>
             </div>
         </div>
